--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,7 +29,7 @@ jobs:
     - name: Upload Artifacts
       uses: actions/upload-artifact@v4.6.1
       with:
-        name: srb2legacy-linux-x86_64
+        name: srb2-linux-x86_64
         path: |
           bin/
           src/comptime.h
@@ -51,7 +51,7 @@ jobs:
     - name: Upload Artifacts
       uses: actions/upload-artifact@v4.6.1
       with:
-        name: srb2legacy-linux-arm64
+        name: srb2-linux-arm64
         path: |
           bin/
           src/comptime.h
@@ -93,7 +93,7 @@ jobs:
      - name: Upload Artifacts
        uses: actions/upload-artifact@v4.6.1
        with:
-        name: srb2legacy-windows-x86_64
+        name: srb2-windows-x86_64
         path: |
           bin/
           src/comptime.h
