--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,7 +23,7 @@ jobs:
     - name: Install Dependencies
       run: sudo apt-get install -y libsdl2-mixer-dev libpng-dev libcurl4-openssl-dev libgme-dev libopenmpt-dev libminiupnpc-dev
 
-    - name: Build SRB2 Legacy
+    - name: Build SRB2
       run: make -C src/ --keep-going -j$(nproc) LINUX64=1
 
     - name: Upload Artifacts
@@ -45,7 +45,7 @@ jobs:
     - name: Install Dependencies
       run: sudo apt-get install -y libsdl2-mixer-dev libpng-dev libcurl4-openssl-dev libgme-dev libopenmpt-dev libminiupnpc-dev
 
-    - name: Build SRB2 Legacy
+    - name: Build SRB2
       run: make -C src/ --keep-going -j$(nproc) LINUX64=1
 
     - name: Upload Artifacts
@@ -87,7 +87,7 @@ jobs:
      - name: Install Dependencies
        run: sudo apt-get install -y gcc-mingw-w64-x86-64 binutils-mingw-w64-x86-64
 
-     - name: Build SRB2 Legacy
+     - name: Build SRB2
        run: make -C src/ --keep-going  -j$(nproc) MINGW64=1
 
      - name: Upload Artifacts
