--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -40,15 +40,15 @@ jobs:
        run: sudo apt-get update
 
      - name: Install Dependencies
-       run: sudo apt-get install -y gcc-mingw-w64-x86-64 binutils-mingw-w64-x86-64
+       run: sudo apt-get install -y gcc-mingw-w64-i686 binutils-mingw-w64-i686
 
      - name: Build SRB2
-       run: make -C src/ --keep-going  -j$(nproc) MINGW64=1
+       run: make -C src/ --keep-going  -j$(nproc) MINGW=1
 
      - name: Upload Artifacts
        uses: actions/upload-artifact@v4.6.1
        with:
-        name: srb2-windows-x86_64
+        name: srb2-windows-x86
         path: |
           bin/
           src/comptime.h
